    * 4638 FIX: esx_vsphere_hostsystem.multipath: Fixed compatibility to older versions...
    * 4627 FIX: apc_symmetra: Fix bogus 100000000 A battery current  occurring on some devices...
    * 4593 FIX: wmi_cpuload: Fixed missing WATO group
    * 4640 FIX: heartbeat_crm: Fixed crash if output contains capital letters
    * 4647 FIX: websphere_mq_queues: Fixed 'list index out of range' error...

    Multisite:
    * 4610 FIX: Fixed error in graph displaying views with invalid perfdata strings...
    * 4474 FIX: graphs for fileinfo checks: the size value was displayed without unit information
    * 4669 FIX: Fixed possible exception in view dashlets (e.g. single event views)...
    * 4671 FIX: Metrics: Fixed exceptions when trying to parse perfdata with range warn/crit...

    WATO:
    * 4558 FIX: Set correct file permissions for WATO snapshots

    BI:
    * 4670 FIX: Fixed exception when trying to edit not existing BI aggregation

    Event Console:
    * 4470 FIX: Event console: fixed incorrect event counting for timed-out and heartbeat events...


1.2.8p21:
    Checks & Agents:
    * 4032 smart agent plugin: disable megacli logging output...
    * 4194 FIX: esx_vsphere_hostsystem.multipath: Fixed grouping of paths...
            NOTE: Please refer to the migration notes!
    * 4544 FIX: multipath: Fixed missing infos in output if a failure occurs...
    * 4549 FIX: citrix_licenses: Fixed always ok state even if all licenses are used...
    * 4550 FIX: smart: the services do not crash anymore if a threshold is not provided
    * 8629 FIX: win_printers: Fix broken default parameters
    * 4551 FIX: zfs_arc_cache: Fixed metrics in html5 graphing
    * 4530 FIX: lnx_distro: Fixed missing distribution if eg. Oracle and Redhat release files are available
    * 4531 FIX: oracle_tablespaces: Added missing info for better analysis
    * 4533 FIX: cisco_vpn_tunnel: Fixed handling if tunnel is not yet open and phase two values are not set