@@ -9,6 +9,7 @@
     * 4593 FIX: wmi_cpuload: Fixed missing WATO group
     * 4640 FIX: heartbeat_crm: Fixed crash if output contains capital letters
     * 4647 FIX: websphere_mq_queues: Fixed 'list index out of range' error...
+    * 4648 FIX: mk_oracle: Fixed logswitches SQL statement for ORACLE RAC case...
 
     Multisite:
     * 4610 FIX: Fixed error in graph displaying views with invalid perfdata strings...
